--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 
 <body>
-<div class="msg-container hide">
-    <p id="msg">Winner</p>
-      <button id="new-btn">New Game</button>
-</div>
+    <div class="msg-container hide">
+        <p id="msg">Winner</p>
+        <button id="new-btn">New Game</button>
+    </div>
     <main>
         <h1>Tic Tac Toe</h1>
         <div class="container">
@@ -28,10 +28,16 @@
                 <button class="box"></button>
             </div>
         </div>
+        <div class="scoreboard">
+            <p id="scoreX">Player X: 0</p>
+            <p id="scoreO">Player O: 0</p>
+        </div>
+
         <button id="reset-btn">Reset Game</button>
     </main>
 
 
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
